# epi-clock-prototype

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  convert-to-utf8.ps1  environment.yml  pyproject.toml
.github/workflows/: ci.yml  run_pipeline.yml
.venv310/Scripts/: activate  activate.bat
ci/: environment.yml
configs/: default.yaml
data/: README.md
docs/: model_card.md
results/: metrics_schema.md
scripts/: README.md  run.ps1  run.sh  run_all.sh
scripts/src/epi_clock/src/epi_clock/: io.py
scripts/src/epi_clock/src/epi_clock/src/epi_clock/: prep.py
scripts/src/epi_clock/src/epi_clock/src/epi_clock/src/epi_clock/: models.py
src/: __init__.py
src/epi_clock/: cli.py  collectors. pubmed_collector.py  init.py  io.py  main.py  models.py  prep.py
src/epi_clock/collectors/: geo_collector.py  meta_analysis.py
src/epi_clock/ollectors/: pubmed_collector.py
src/epi_clock/src/epi_clock/src/epi_clock/: prep.py
tests/: __init__.py  test_version.py
