[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "epi-clock"
version = "0.1.0"
description = "Prototype pipeline for epigenetic clock experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "statsmodels",
  "matplotlib",
  "seaborn",
  "pyreadr",
  "pyarrow",
  "polars",
  "lifelines",
  "pingouin",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
