[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epi-clock"
version = "0.1.0"
description = "CLI for analyzing and running simple file reports."
authors = [{ name = "NURCAN DENLİ BAYIR", email = "denlizeynep1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cli", "analysis"]

[project.scripts]
epi-clock = "epi_clock.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
